# Elixir

./: README.md  api.py  main.py  pdf_bot.py  requirements.txt  train_llm.py
archive/: phase-1.pptx
gui/: README.md  meson.build  org.elixir.elixir.json
gui/data/: meson.build  org.elixir.elixir.desktop.in  org.elixir.elixir.gschema.xml  org.elixir.elixir.metainfo.xml.in
gui/data/icons/: meson.build
gui/po/: POTFILES  meson.build
gui/src/: elixir.gresource.xml  elixir.in  main.py  meson.build  window.py  window.ui
src/: main.py
